third_party/move/move-compiler-v2/tests/bytecode-generator/bug_16543_fv_wrapper_pack_failure.exp
// -- Model dump before first bytecode pipeline
module 0xc0ffee::m {
    struct Lazy {
        0: || has drop,
    }
} // end 0xc0ffee::m
module 0xc0ffee::m_friend {
    struct Lazy {
        0: || has drop,
    }
} // end 0xc0ffee::m_friend
module 0xc0ffee::n {
    public fun test_friend(): m_friend::Lazy {
        closure#0n::__lambda__1__test_friend()
    }
    private fun __lambda__1__test_friend() {
        Tuple()
    }
} // end 0xc0ffee::n
module 0xc0ffee1::n {
    public fun test(): 0xc0ffee::m::Lazy {
        closure#0n::__lambda__1__test()
    }
    private fun __lambda__1__test() {
        Tuple()
    }
} // end 0xc0ffee1::n

// -- Sourcified model before first bytecode pipeline
module 0xc0ffee::m {
    struct Lazy has drop {
        0: || has drop,
    }
}
module 0xc0ffee::m_friend {
    struct Lazy has drop {
        0: || has drop,
    }
}
module 0xc0ffee::n {
    public fun test_friend(): m_friend::Lazy {
        <<wrongly typed closure expression>>
    }
    fun lambda__1__test_friend() {
    }
}
module 0xc0ffee1::n {
    public fun test(): 0xc0ffee::m::Lazy {
        <<wrongly typed closure expression>>
    }
    fun lambda__1__test() {
    }
}


Diagnostics:
error: cannot implicitly pack a wrapper struct `m_friend::Lazy` defined in a different module `0xc0ffee::m_friend` because it has friend visibility
   ┌─ tests/bytecode-generator/bug_16543_fv_wrapper_pack_failure.move:13:9
   │
13 │         || {}
   │         ^^^^^

error: cannot implicitly pack a wrapper struct `m::Lazy` defined in a different module `0xc0ffee::m` because it has package visibility
   ┌─ tests/bytecode-generator/bug_16543_fv_wrapper_pack_failure.move:19:9
   │
19 │         || {}
   │         ^^^^^
